refactor: changed some file names

--- a/src/app/questionnaires/questionnaires-create/questionnaires-create.component.html
+++ b/src/app/questionnaires/questionnaires-create/questionnaires-create.component.html
@@ -1,6 +1,6 @@
 <app-navigation>
   <app-toasts></app-toasts>
-  <div class="container">
+  <div>
   <button class="btn btn-primary mb-3" type="button" routerLink="/questionnaires">Terug</button>
   <h1> Creeer een vragenlijst </h1>
   <form [formGroup]="questionnaireForm" (ngSubmit)="createQuestionnaire()">
