--- a/src/app/questionnaires/questionnaires-create/questionnaires-create.component.html
+++ b/src/app/questionnaires/questionnaires-create/questionnaires-create.component.html
@@ -25,6 +25,7 @@
     <div style="margin-top:5px; margin-bottom:5px;" >
       <div class="d-grid gap-3 d-md-flex justify-content-md-begin">
         <button class="btn btn-success mb-3" type="button" (click)= addNewSegment()>Segment toevoegen</button>
+        <button class="btn btn-danger mb-3 right-button" type="button" (click)= clearAlleSegmenten()>Verwijder alle segment</button>
         <button class="btn btn-outline-danger mb-3 right-button" type="button" (click)= clearForm()>Vragenlijst formulier legen</button>
       </div>
 
