--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -31,7 +31,7 @@
             class="bi bi-person-fill vAlignIcon ms-2"></i></a>
           <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
             <div>
-              <li><a ngbDropdownItem role="button" class="dropdown-item">Bewerk profiel</a></li>
+              <li><a ngbDropdownItem role="button" class="dropdown-item" routerLink="/me">Bewerk profiel</a></li>
               <li><a ngbDropdownItem role="button" class="dropdown-item" (click)="onLogout()">Uitloggen</a></li>
             </div>
           </div>
