--- a/src/app/user/self-edit/self-edit.component.html
+++ b/src/app/user/self-edit/self-edit.component.html
@@ -47,12 +47,11 @@
         </div>
       </fieldset>
 
-      <input class="btn-check" id="passwordResetButton" />
-      <label
+      <a
         class="btn btn-primary mb-3"
-        for="passwordResetButton"
         (click)="onChangePassword()"
-        >Verander wachtwoord</label
+        id="passwordResetButton"
+        >Verander wachtwoord</a
       ><br />
 
       <div class="d-flex justify-content-between mt-2">
