fix: navigation is now in a container

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <nav class="navigation__nav navbar navbar-expand-sm">
-  <div class="container-fluid">
+  <div class="container">
     <a routerLink="" class="navbar-brand text-light m-0 me-sm-3"><img src="assets/img/LOGO-SPINE-DARK-BG.png" width="24"
                                                                       height="30" alt="i.Question"></a>
     <button type="button" class="navbar-toggler" (click)="collapsed = !collapsed">
