fix: more consistent icons and most things now also have icons

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -51,6 +51,7 @@
                       type="submit"
                       [disabled]="!loginForm.valid"
                     >
+                    <i class="bi bi-box-arrow-in-right"></i>
                       Login
                     </button>
                   </form>
