--- a/src/app/questionnaires/questionnaires-view/questionnaires-view.component.html
+++ b/src/app/questionnaires/questionnaires-view/questionnaires-view.component.html
@@ -209,7 +209,7 @@
                 ngbTooltip="Vragenlijst invullen"
                 container="body"
               >
-              <i class="bi bi-pen"></i>
+              <i class="bi bi-pen-fill"></i>
               </a>
             </div>
           </td>
