--- a/src/app/user/user-overview/user-overview.component.html
+++ b/src/app/user/user-overview/user-overview.component.html
@@ -93,6 +93,7 @@
   </div>
   <div class="d-grid gap-2 d-md-flex justify-content-md-end">
     <button type="button" class="btn btn-primary" routerLink="new">
+      <i class="bi bi-person-add"></i>
       Creëer gebruiker
     </button>
   </div>
