--- a/src/app/questionnaires/questionnaire-fill/id/id.component.html
+++ b/src/app/questionnaires/questionnaire-fill/id/id.component.html
@@ -20,6 +20,7 @@
     class="btn btn-primary"
     (click)="onSubmit()"
   >
+  <i class="bi bi-cloud-arrow-up-fill"></i>
     Opslaan en versturen
   </button>
 </div>
