--- a/src/app/questionnaires/questionnaires-create/questionnaires-create.component.html
+++ b/src/app/questionnaires/questionnaires-create/questionnaires-create.component.html
@@ -1,65 +1,200 @@
-<app-navigation>
-  <app-toasts></app-toasts>
-  <div>
-  <button class="btn btn-primary mb-3" type="button" routerLink="/questionnaires">Terug</button>
-  <h1> Creeer een vragenlijst </h1>
+<app-navigation></app-navigation>
+<app-toasts></app-toasts>
+<nav class="navbar sticky-top" style="background-color: #131a4d">
+  <div class="container d-flex justify-content-between">
+    <div id="align-buttons-left">
+      <button
+        class="btn btn-outline-danger m-2"
+        type="button"
+        (click)="clearForm()"
+      >
+        Vragenlijst formulier legen
+      </button>
+    </div>
+    <div id="align-buttons-right">
+      <button
+        class="btn btn-danger m-2"
+        type="button"
+        (click)="clearAlleSegmenten()"
+      >
+        Verwijder alle segmenten
+      </button>
+      <button
+        class="btn btn-success m-2"
+        type="button"
+        (click)="addNewSegment()"
+      >
+        Segment toevoegen
+      </button>
+    </div>
+  </div>
+</nav>
+<div class="container mt-3">
+  <div class="d-flex justify-content-between align-content-center">
+    <h1>Creeer een vragenlijst</h1>
+  </div>
   <form [formGroup]="questionnaireForm" (ngSubmit)="createQuestionnaire()">
-
-    <div class="form-group mb-3">
+    <div class="form-floating mb-3">
+      <input
+        type="text"
+        class="form-control"
+        formControlName="questionnaireName"
+        placeholder="Naam vragenlijst"
+      />
       <label for="questionnaireName">Naam vragenlijst</label>
-      <input type="text" id="questionnaireName" name="questionnaireName" formControlName="questionnaireName" class="form-control" placeholder="Naam vragenlijst">
-    </div>
-    <div class="form-group mb-3">
-      <label for="questionnaireDescription">Beschrijving vragenlijst</label>
-      <textarea type="text" class="form-control mt-2" id="questionnaireDescription" formControlName="questionnaireDescription" placeholder="Beschrijving"></textarea>
-    </div>
-    <div class="form-group mb-3">
-      <label for="questionnaireDescription">Datum van aanmaken</label>
-      <input type="date" class="form-control mt-2" id="questionnaireDate" formControlName="questionnaireDate" placeholder="dd/mm/yyyy">
-    </div>
-    <div class="form-group mb-3">
-      <label for="questionnaireName">Naam invuller</label>
-      <input type="text" id="userName" name="name" formControlName="userName" class="form-control" placeholder="Naam invuller">
     </div>
 
-    <div style="margin-top:5px; margin-bottom:5px;" >
-      <div class="d-grid gap-3 d-md-flex justify-content-md-begin">
-        <button class="btn btn-success mb-3" type="button" (click)= addNewSegment()>Segment toevoegen</button>
-        <button class="btn btn-danger mb-3 right-button" type="button" (click)= clearAlleSegmenten()>Verwijder alle segment</button>
-        <button class="btn btn-outline-danger mb-3 right-button" type="button" (click)= clearForm()>Vragenlijst formulier legen</button>
+    <div class="form-floating mb-3">
+      <textarea
+        type="text"
+        class="form-control"
+        id="questionnaireDescription"
+        formControlName="questionnaireDescription"
+        placeholder="Beschrijving vragenlijst"
+      ></textarea>
+      <label for="questionnaireName">Beschrijving vragenlijst</label>
+    </div>
+
+    <fieldset disabled>
+      <div
+        class="form-floating mb-3"
+        ngbTooltip="Dit is de datum van vandaag, deze kan niet worden aangepast."
+        container="body"
+        placement="top"
+      >
+        <input
+          type="date"
+          class="form-control"
+          id="questionnaireDate"
+          formControlName="questionnaireDate"
+          placeholder="Datum van aanmaken"
+        />
+        <label for="questionnaireName">Datum van aanmaken</label>
       </div>
 
-      <table [ngStyle]="{'border': '1px solid grey'}" class="table table-striped" formArrayName="segments">
+      <div
+        class="form-floating mb-3"
+        ngbTooltip="Deze vraag word door de hulpverlener ingevuld."
+        container="body"
+        placement="top"
+      >
+        <input
+          type="text"
+          class="form-control"
+          formControlName="questionnaireDate"
+          placeholder="Naam patiënt"
+        />
+        <label for="questionnaireName">Naam patiënt</label>
+      </div>
+    </fieldset>
+    <div class="create__segments">
+      <!--
+          For loop met segmenten
+            Button om segment te verwijderen
+            Button om vraag toe te voegen
+              For loop met vragen
+              Input voor vraag
+              input voor type vraag
+              Button om vraag te verwijderen
+      -->
+      <div
+        class="create__singular_segment card mb-3"
+        *ngFor="
+          let segment of questionnaireSegmentsArray.controls;
+          let index = index
+        "
+        [formGroupName]="index"
+      >
+        <div class="card-header">
+          <div class="d-flex justify-content-between align-content-center">
+            <div class="form-floating">
+              <input
+                type="text"
+                class="form-control"
+                id="segments"
+                formControlName="segments"
+                placeholder="Naam segment"
+                required
+              />
+              <label for="segments">Naam segment</label>
+            </div>
+            <div id="buttons" class="align-self-center h-100">
+              <button class="btn btn-success m-2" (click)="addQuestion()">
+                <i class="bi bi-plus-circle"></i>
+                Vraag toevoegen
+              </button>
 
-      <tr *ngFor="let segmentCtrl of segmentControls; let j=index" [formGroupName]="j">
-        <th colspan="2">Segment {{j+1}}:
-          <input type="text" class="form-control" formControlName="segments" placeholder="Naam segment">
-        </th>
-        <th width="200px"><button type="button" (click)="deleteSegment(j)" class="btn btn-danger active mt-3 mb-3">Verwijder segment</button></th>
-        <th width="150px"><button type="button" (click)="addQuestion()" class="btn btn-success active mt-3 mb-3">Vraag toevoegen</button></th>
-      </tr>
-
-      <tr Ngclass="form-group mb-3" *ngFor="let questionCtrl of questionControls; let i=index" [formGroupName]="i">
-        <th class="mt-3" for="questionnaireName">Vraag {{i+1}}</th>
-        <input type="text" class="form-control" formControlName="question" placeholder="Mooie vraag invuller">
-        <div>
-          <select id="userRoleInput" class="form-select" aria-label="Default select example" formControlName="questionnaireType">
-            <option value="Open">Open</option>
-            <option value="Gesloten">Gesloten</option>
-          </select>
+              <button
+                class="btn btn-danger m-2"
+                type="button"
+                (click)="deleteSegment(index)"
+              >
+                <i class="bi bi-trash"></i>
+              </button>
+            </div>
+          </div>
         </div>
-        <th>
-          <button type="button" (click)="deleteQuestion(i)" class="btn btn-danger active mt-3 mb-3">Verwijder vraag</button>
-        </th>
-      </tr>
-
-    </table>
+        <div class="card-body create__singular_question"
+             *ngFor="let questions of questionControls; let questionIndex = index"
+             [formGroupName]="questionIndex">
+          <div class="d-flex justify-content-between align-content-center">
+            <div class="form-floating m-2" style="width: 100%;">
+              <input
+                type="text"
+                class="form-control"
+                formControlName="question"
+                placeholder="Vraag"
+                required
+              />
+              <label for="questionnaireName">Vraag</label>
+            </div>
+            <div class="form-floating m-2">
+              <select
+                type="text"
+                class="form-control"
+                id="questionnaireName"
+                formControlName="questionnaireType"
+                placeholder="Type vraag"
+              >
+                <option value="OPEN">Open vraag</option>
+                <option value="CLOSED">Gesloten vraag</option>
+              </select>
+              <label for="questionnaireName">Type vraag</label>
+            </div>
+            <button
+              class="btn btn-danger m-2"
+              type="button"
+              (click)="deleteQuestion(questionIndex)"
+            >
+              <i class="bi bi-trash"></i>
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="d-flex justify-content-between">
+      <button
+        class="btn btn-outline-primary mb-3"
+        type="button"
+        routerLink="/questionnaires"
+      >
+        <i class="bi bi-arrow-left"></i>
+        Terug
+      </button>
 
-    <button type="submit" class="btn btn-primary mt-3" routerLink="/questionnaires" [disabled]="!questionnaireForm.valid">Creëer</button>
+      <button
+        type="submit"
+        class="btn btn-primary mt-3"
+        routerLink="/questionnaires"
+        [disabled]="!questionnaireForm.valid"
+      >
+        <i class="bi bi-cloud-arrow-up-fill"></i>
+        Creëer
+      </button>
+    </div>
   </form>
-  <br/>
-</div>
+  <br />
 
-  <pre>{{questionnaireSegmentsArray.value | json}}</pre>
-</app-navigation>
+  <pre>{{ questionnaireSegmentsArray.value | json }}</pre>
+</div>
+<app-footer></app-footer>
