Fix: Updated user edit test

--- a/src/app/user/user-edit/user-edit.component.html
+++ b/src/app/user/user-edit/user-edit.component.html
@@ -33,7 +33,7 @@
               <td>
                 <select
                   id="updateUserRole"
-                  class="form-select"
+                  class="form-select updateUserRole"
                   aria-label="Default select example"
                   formControlName="updateUserRole"
                 >
