fix: user controls displays over segment navbar

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -30,7 +30,7 @@
             class="bi bi-person-fill vAlignIcon ms-2"></i></a>
           <a class="btn btn-light dropdown-toggle d-none d-sm-block d-md-none" ngbDropdownToggle role="button"><i
             class="bi bi-person-fill vAlignIcon ms-2"></i></a>
-          <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
+          <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu style="z-index: 1025;">
             <div>
               <li><a ngbDropdownItem role="button" class="dropdown-item" routerLink="/me">Bewerk profiel
                 <i class="bi bi-person-fill-gear vAlignIcon ms-2"></i>
