Fix: Deleted unused attributes

--- a/src/app/questionnaires/questionnaires-create/questionnaires-create.component.html
+++ b/src/app/questionnaires/questionnaires-create/questionnaires-create.component.html
@@ -36,6 +36,7 @@
         class="form-control"
         formControlName="name"
         placeholder="Naam vragenlijst"
+        id="name"
       />
       <label for="name">Naam vragenlijst</label>
     </div>
