--- a/src/app/questionnaires/questionnaire-fill/id/id.component.html
+++ b/src/app/questionnaires/questionnaire-fill/id/id.component.html
@@ -9,10 +9,11 @@
   <hr />
   <h3>{{ questionnaire$.name }}</h3>
   <p>
-    Auteur: {{ questionnaire$.author.name }} -
-    {{ questionnaire$.author.organization }}
+    <b>Auteur: </b>{{ questionnaire$.author.name }}<br>
+    <b>Organisatie: </b>{{ questionnaire$.author.organization }}
   </p>
   <app-entry-form #form [questions]="questions$"></app-entry-form>
+  <br>
   <button
     id="submitBtn"
     [disabled]="submitBtnDisabled"
