--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,9 +1,14 @@
 .footer{
-    margin-left: 2rem;
-    margin-right: 2rem;
     background: white;
     z-index: 100;
 }
+
+@media only screen and (min-width: 600px) {
+    .footer {
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+  }
 
 .container {
     padding-bottom: 8rem;
