Feat: Added test for Entry view

--- a/src/app/entries/entries-view/entries-view.component.html
+++ b/src/app/entries/entries-view/entries-view.component.html
@@ -6,7 +6,7 @@
       <table class="table table-striped">
         <thead>
           <tr>
-            <th scope="col">Vraagnummer</th>
+            <th scope="col" class="vraagNummer">Vraagnummer</th>
             <th scope="col">Vraag</th>
             <th scope="col" class="col-8">Antwoord</th>
           </tr>
