--- a/src/app/questionnaires/questionnaires-create/questionnaires-create.component.html
+++ b/src/app/questionnaires/questionnaires-create/questionnaires-create.component.html
@@ -199,6 +199,7 @@ Optie d"
       </button>
 
       <button
+        id="submit"
         type="submit"
         class="btn btn-primary mt-3"
       >
