--- a/src/app/entries/entries-view/entries-view.component.html
+++ b/src/app/entries/entries-view/entries-view.component.html
@@ -15,7 +15,7 @@
           <tr *ngFor="let answer of entry$.answers; index as i">
             <th>{{i + 1}}</th>
             <td>{{answer.question.label}}</td>
-            <td>{{answer.result}}</td>
+            <td class="text-break">{{answer.result}}</td>
           </tr>
         </tbody>
       </table>
