--- a/src/app/reset-password/change-password/change-password.component.html
+++ b/src/app/reset-password/change-password/change-password.component.html
@@ -32,7 +32,12 @@
                     type="submit"
                     [disabled]="!changePasswordForm.valid"
                   >
+                  <span *ngIf="loading" class="spinner-grow" role="status"></span>
+                  <div *ngIf="!loading">
+                    <i class="bi bi-box-arrow-in-right"></i>
                     Veranderen maar!
+                  </div>
+                    
                   </button>
                 </form>
                 <div class="text-center">
