--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,6 +2,7 @@
   <!-- This should display a blob svg -->
   <div class="blob"></div>
 </nav>
+<app-toasts></app-toasts>
 <div class="vh-100 bg-secondary d-flex centrerenIsMoeielijkHeVince">
   <div class="container container-top-margin" style="z-index: 10">
     <div class="row justify-content-center">
