--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -28,7 +28,11 @@
                   type="submit"
                   [disabled]="!changePasswordForm.valid"
                 >
-                  Vraag nieuw wachtwoord aan!
+                <span *ngIf="loading" class="spinner-grow" role="status"></span>
+                <div *ngIf="!loading">
+                  <i class="bi bi-box-arrow-in-right"></i>
+                  Vraag een nieuw wachtwoord aan
+                </div>
                 </button>
               </form>
               <div class="text-center">
