fix: placement of alert

--- a/src/app/questionnaires/questionnaires-create/questionnaires-create.component.html
+++ b/src/app/questionnaires/questionnaires-create/questionnaires-create.component.html
@@ -135,7 +135,7 @@
               </div>
             </div>
             <div *ngIf="getControlsFromSegment(segmentIndex).length >= 1">
-              <div class="m-2">
+              <div class="card-body">
                 <div class="alert alert-danger d-flex align-items-center" role="alert">
                   <i class="bi bi-exclamation-triangle-fill"></i>
                   <div>
