add spinners, fix button

--- a/src/app/user/user-create/user-create.component.html
+++ b/src/app/user/user-create/user-create.component.html
@@ -6,31 +6,55 @@
   <form [formGroup]="registerForm" (ngSubmit)="createUser()">
     <div class="mb-3">
       <label for="userEmailInput" class="form-label">E-mail addres</label>
-      <input type="email" class="form-control" id="userEmailInput" formControlName="registerEmail">
+      <input
+        type="email"
+        class="form-control"
+        id="userEmailInput"
+        formControlName="registerEmail"
+      />
     </div>
     <div class="mb-3">
       <label for="userNameInput" class="form-label">Naam</label>
-      <input type="email" class="form-control" id="userNameInput" formControlName="registerName">
+      <input
+        type="email"
+        class="form-control"
+        id="userNameInput"
+        formControlName="registerName"
+      />
     </div>
     <div class="mb-3">
       <label for="userOrganizationInput" class="form-label">Organisatie</label>
-      <input type="email" class="form-control" id="userOrganizationInput" formControlName="registerOrganization">
+      <input
+        type="email"
+        class="form-control"
+        id="userOrganizationInput"
+        formControlName="registerOrganization"
+      />
     </div>
     <label for="userRoleInput" class="form-label">Rol</label>
-    <select id="userRoleInput" class="form-select" aria-label="Default select example" formControlName="registerRole">
+    <select
+      id="userRoleInput"
+      class="form-select"
+      aria-label="Default select example"
+      formControlName="registerRole"
+    >
       <option value="SPINE_USER">Spine gebruiker</option>
       <option value="SPINE_ADMIN">Spine administrator</option>
       <option value="CAREGIVER">Hulpverlener</option>
     </select>
     <div class="d-grid gap-2 d-md-flex justify-content-between">
       <button type="button" class="m-2 btn btn-primary" routerLink="/users">
-        <i class="bi bi-backspace"></i> &nbsp;
-        Terug
-      
+        <i class="bi bi-backspace"></i> &nbsp; Terug
       </button>
-      <button type="submit" class="m-2 btn btn-primary" [disabled]="!registerForm.valid">
-        <i class="bi bi-person-add"></i> &nbsp;
-        Creëer gebruiker
+      <button
+        type="submit"
+        class="m-2 btn btn-primary"
+        [disabled]="!registerForm.valid"
+      >
+        <span *ngIf="loading" class="spinner-grow" role="status"></span>
+        <div *ngIf="!loading">
+          <i class="bi bi-person-add"></i> &nbsp; Creëer gebruiker
+        </div>
       </button>
     </div>
   </form>
