--- a/src/app/entries/entries-overview/entries-overview.component.scss
+++ b/src/app/entries/entries-overview/entries-overview.component.scss
@@ -26,3 +26,13 @@
     place-items: center;
     padding-right: .5rem;
   }
+  .tableIcon {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    transition: all 0.2 ease-in-out;
+  }
+  
+  .tableIcon:hover {
+    color: white;
+  }
